<resources>
    <string name="app_name">ChallengeBinar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_with_your">Sign In</string>
    <string name="dcs_wash">DCS WASH</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account_sign_up"><i> dont have an account ?</i> <b> sign up</b></string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="Already_have_an_account_Sign_In"><i> Already have an account?</i> <b>Sign In</b></string>
    <string name="welcome_customer_dcs_wash_laundry">Welcome Customer</string>
    <string name="welcome_to_the_apps_dcs_wash_laundry"><b>Hallo, Welcome Friend</b></string>
    <string name="desc"><i> Hallo Para sahabat DSC laundry wash,silahkan klik tombol dibawah ini</i></string>
    <string name="next">Get Started</string>
    <string name="title_activity_add">activity_add</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="form">Silahkan Isi Data Anda</string>
    <string name="congratz_you_have_sign_up_successfully">Congratz !! You have sign up successfully.</string>
    <string name="laundry_name">DCS LAUNDRY WASH</string>
    <string name="welcome_customer">Welcome Customer</string>
    <string name="logout">LogOut</string>
    <string name="nama_pelanggan">Nama</string>
    <string name="tanggal_pesanan">Tanggal</string>
    <string name="alamat">Alamat</string>
    <string name="jenis">Jenis</string>
    <string name="jumlah">Jumlah</string>
    <string name="add_list">add_list</string>
    <string name="update_jumlah">Update Data</string>
    <string name="tanggal">Tanggal</string>
    <string name="password_konfirmasi">password konfirmasi</string>
</resources>