<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/item_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/blue"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@color/white"
    app:strokeWidth="2dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_delete_24"
            />

        <TextView
            android:id="@+id/tv_nama_pelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pelanggan"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tanggal_pesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_pesanan"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_pelanggan" />
        <TextView
            android:id="@+id/tv_alamat_pelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@id/tv_tanggal_pesanan"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_pelanggan" />

        <TextView
            android:id="@+id/tv_jenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_pesanan" />
        <TextView
            android:id="@+id/tv_jumlah_pesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_alamat_pelanggan"
            app:layout_constraintTop_toBottomOf="@id/tv_alamat_pelanggan" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
